[package]
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
description = "A Nushell plugin for easily converting between common units"
edition = "2021"
license = "GPL-3.0-only"
name = "nu_plugin_units"
repository = "https://github.com/JosephTLyons/nu_plugin_units"
version = "0.1.1"

[dependencies]
anyhow = "1.0.86"
nu-ansi-term = "0.50.1"
nu-plugin = "0.97.1"
nu-protocol = "0.97.1"
unit-conversions = "0.1.16"
